2.Code/y.output
State 209 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression INC_OP
   10                   | postfix_expression DEC_OP

   11 argument_expression_list: assignment_expression
   12                         | argument_expression_list ',' assignment_expression

   13 unary_expression: postfix_expression
   14                 | INC_OP unary_expression
   15                 | DEC_OP unary_expression
   16                 | unary_operator cast_expression
   17                 | SIZEOF unary_expression

   18 unary_operator: '&'
   19               | '*'
   20               | '+'
   21               | '-'
   22               | '~'
   23               | '!'

   24 cast_expression: unary_expression

   25 multiplicative_expression: cast_expression
   26                          | multiplicative_expression '*' cast_expression
   27                          | multiplicative_expression '/' cast_expression
   28                          | multiplicative_expression '%' cast_expression

   29 additive_expression: multiplicative_expression
   30                    | additive_expression '+' multiplicative_expression
   31                    | additive_expression '-' multiplicative_expression

   32 shift_expression: additive_expression

   33 relational_expression: shift_expression
   34                      | relational_expression '<' shift_expression
   35                      | relational_expression '>' shift_expression
   36                      | relational_expression LE_OP shift_expression
   37                      | relational_expression GE_OP shift_expression

   38 equality_expression: relational_expression
   39                    | equality_expression EQ_OP relational_expression
   40                    | equality_expression NE_OP relational_expression

   41 and_expression: equality_expression
   42               | and_expression '&' equality_expression

   43 exclusive_or_expression: and_expression
   44                        | exclusive_or_expression '^' and_expression

   45 inclusive_or_expression: exclusive_or_expression
   46                        | inclusive_or_expression '|' exclusive_or_expression

   47 logical_and_expression: inclusive_or_expression
   48                       | logical_and_expression AND_OP inclusive_or_expression

   49 logical_or_expression: logical_and_expression
   50                      | logical_or_expression OR_OP logical_and_expression

   51 conditional_expression: logical_or_expression
   52                       | logical_or_expression '?' expression ':' conditional_expression

   53 assignment_expression: conditional_expression
   54                      | unary_expression assignment_operator assignment_expression

   55 assignment_operator: '='
   56                    | MUL_ASSIGN
   57                    | DIV_ASSIGN
   58                    | MOD_ASSIGN
   59                    | ADD_ASSIGN
   60                    | SUB_ASSIGN
   61                    | LEFT_ASSIGN
   62                    | RIGHT_ASSIGN
   63                    | AND_ASSIGN
   64                    | XOR_ASSIGN
   65                    | OR_ASSIGN

   66 expression: assignment_expression
   67           | expression ',' assignment_expression

   68 declaration: declaration_specifiers ';'
   69            | declaration_specifiers init_declarator_list ';'

   70 declaration_specifiers: type_specifier
   71                       | type_specifier declaration_specifiers
   72                       | type_qualifier
   73                       | type_qualifier declaration_specifiers

   74 init_declarator_list: init_declarator
   75                     | init_declarator_list ',' init_declarator

   76 init_declarator: declarator
   77                | declarator '=' initializer

   78 type_specifier: VOID
   79               | CHAR
   80               | SHORT
   81               | INT
   82               | LONG
   83               | FLOAT
   84               | DOUBLE
   85               | SIGNED
   86               | UNSIGNED

   87 type_qualifier: CONST

   88 declarator: direct_declarator

   89 direct_declarator: IDENTIFIER
   90                  | '(' declarator ')'
   91                  | direct_declarator '[' ']'
   92                  | direct_declarator '(' identifier_list ')'
   93                  | direct_declarator '(' ')'

   94 identifier_list: IDENTIFIER
   95                | identifier_list ',' IDENTIFIER

   96 initializer: assignment_expression
   97            | '{' initializer_list '}'

   98 initializer_list: initializer
   99                 | initializer_list ',' initializer

  100 statement: compound_statement
  101          | expression_statement
  102          | selection_statement
  103          | iteration_statement
  104          | jump_statement
  105          | printf_statment
  106          | scanf_statment

  107 compound_statement: '{' '}'
  108                   | '{' statement_list '}'
  109                   | '{' declaration_list '}'
  110                   | '{' declaration_list statement_list '}'
  111                   | '{' statement_list declaration_list '}'

  112 declaration_list: declaration
  113                 | declaration_list declaration

  114 statement_list: statement
  115               | statement_list statement

  116 expression_statement: ';'
  117                     | expression ';'

  118 selection_statement: IF '(' expression ')' statement
  119                    | IF '(' expression ')' statement ELSE statement

  120 iteration_statement: WHILE '(' expression ')' statement
  121                    | FOR '(' expression_statement expression_statement ')' statement
  122                    | FOR '(' expression_statement expression_statement expression ')' statement

  123 printf_statment: PRINTF '(' STRING_LITERAL arg_list ')' ';'
  124                | PRINTF '(' STRING_LITERAL ')' ';'

  125 scanf_statment: SCANF '(' STRING_LITERAL ',' IDENTIFIER ')' ';'

  126 arg_list: ',' IDENTIFIER
  127         | arg_list ',' IDENTIFIER

  128 jump_statement: RETURN ';'
  129               | RETURN expression ';'

  130 translation_unit: external_declaration
  131                 | translation_unit external_declaration

  132 external_declaration: function_definition
  133                     | declaration

  134 function_definition: declaration_specifiers declarator declaration_list compound_statement
  135                    | declaration_specifiers declarator compound_statement
  136                    | declarator declaration_list compound_statement
  137                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 23
'%' (37) 28
'&' (38) 18 42
'(' (40) 4 7 8 90 92 93 118 119 120 121 122 123 124 125
')' (41) 4 7 8 90 92 93 118 119 120 121 122 123 124 125
'*' (42) 19 26
'+' (43) 20 30
',' (44) 12 67 75 95 99 125 126 127
'-' (45) 21 31
'/' (47) 27
':' (58) 52
';' (59) 68 69 116 117 123 124 125 128 129
'<' (60) 34
'=' (61) 55 77
'>' (62) 35
'?' (63) 52
'[' (91) 6 91
']' (93) 6 91
'^' (94) 44
'{' (123) 97 107 108 109 110 111
'|' (124) 46
'}' (125) 97 107 108 109 110 111
'~' (126) 22
error (256)
IDENTIFIER (258) 1 89 94 95 125 126 127
CONSTANT (259) 2
STRING_LITERAL (260) 3 123 124 125
SIZEOF (261) 17
INC_OP (262) 9 14
DEC_OP (263) 10 15
LE_OP (264) 36
GE_OP (265) 37
EQ_OP (266) 39
NE_OP (267) 40
AND_OP (268) 48
OR_OP (269) 50
MUL_ASSIGN (270) 56
DIV_ASSIGN (271) 57
MOD_ASSIGN (272) 58
ADD_ASSIGN (273) 59
SUB_ASSIGN (274) 60
LEFT_ASSIGN (275) 61
RIGHT_ASSIGN (276) 62
AND_ASSIGN (277) 63
XOR_ASSIGN (278) 64
OR_ASSIGN (279) 65
CHAR (280) 79
SHORT (281) 80
INT (282) 81
LONG (283) 82
SIGNED (284) 85
UNSIGNED (285) 86
FLOAT (286) 83
DOUBLE (287) 84
CONST (288) 87
VOID (289) 78
IF (290) 118 119
ELSE (291) 119
WHILE (292) 120
FOR (293) 121 122
RETURN (294) 128 129
PRINTF (295) 123 124
SCANF (296) 125


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
primary_expression (66)
    on left: 1 2 3 4, on right: 5
postfix_expression (67)
    on left: 5 6 7 8 9 10, on right: 6 7 8 9 10 13
argument_expression_list (68)
    on left: 11 12, on right: 8 12
unary_expression (69)
    on left: 13 14 15 16 17, on right: 14 15 17 24 54
unary_operator (70)
    on left: 18 19 20 21 22 23, on right: 16
cast_expression (71)
    on left: 24, on right: 16 25 26 27 28
multiplicative_expression (72)
    on left: 25 26 27 28, on right: 26 27 28 29 30 31
additive_expression (73)
    on left: 29 30 31, on right: 30 31 32
shift_expression (74)
    on left: 32, on right: 33 34 35 36 37
relational_expression (75)
    on left: 33 34 35 36 37, on right: 34 35 36 37 38 39 40
equality_expression (76)
    on left: 38 39 40, on right: 39 40 41 42
and_expression (77)
    on left: 41 42, on right: 42 43 44
exclusive_or_expression (78)
    on left: 43 44, on right: 44 45 46
inclusive_or_expression (79)
    on left: 45 46, on right: 46 47 48
logical_and_expression (80)
    on left: 47 48, on right: 48 49 50
logical_or_expression (81)
    on left: 49 50, on right: 50 51 52
conditional_expression (82)
    on left: 51 52, on right: 52 53
assignment_expression (83)
    on left: 53 54, on right: 11 12 54 66 67 96
assignment_operator (84)
    on left: 55 56 57 58 59 60 61 62 63 64 65, on right: 54
expression (85)
    on left: 66 67, on right: 4 6 52 67 117 118 119 120 122 129
declaration (86)
    on left: 68 69, on right: 112 113 133
declaration_specifiers (87)
    on left: 70 71 72 73, on right: 68 69 71 73 134 135
init_declarator_list (88)
    on left: 74 75, on right: 69 75
init_declarator (89)
    on left: 76 77, on right: 74 75
type_specifier (90)
    on left: 78 79 80 81 82 83 84 85 86, on right: 70 71
type_qualifier (91)
    on left: 87, on right: 72 73
declarator (92)
    on left: 88, on right: 76 77 90 134 135 136 137
direct_declarator (93)
    on left: 89 90 91 92 93, on right: 88 91 92 93
identifier_list (94)
    on left: 94 95, on right: 92 95
initializer (95)
    on left: 96 97, on right: 77 98 99
initializer_list (96)
    on left: 98 99, on right: 97 99
statement (97)
    on left: 100 101 102 103 104 105 106, on right: 114 115 118 119
    120 121 122
compound_statement (98)
    on left: 107 108 109 110 111, on right: 100 134 135 136 137
declaration_list (99)
    on left: 112 113, on right: 109 110 111 113 134 136
statement_list (100)
    on left: 114 115, on right: 108 110 111 115
expression_statement (101)
    on left: 116 117, on right: 101 121 122
selection_statement (102)
    on left: 118 119, on right: 102
iteration_statement (103)
    on left: 120 121 122, on right: 103
printf_statment (104)
    on left: 123 124, on right: 105
scanf_statment (105)
    on left: 125, on right: 106
arg_list (106)
    on left: 126 127, on right: 123 127
jump_statement (107)
    on left: 128 129, on right: 104
translation_unit (108)
    on left: 130 131, on right: 0 131
external_declaration (109)
    on left: 132 133, on right: 130 131
function_definition (110)
    on left: 134 135 136 137, on right: 132


state 0

    0 $accept: . translation_unit $end

    '('         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    CONST       shift, and go to state 11
    VOID        shift, and go to state 12

    declaration             go to state 13
    declaration_specifiers  go to state 14
    type_specifier          go to state 15
    type_qualifier          go to state 16
    declarator              go to state 17
    direct_declarator       go to state 18
    translation_unit        go to state 19
    external_declaration    go to state 20
    function_definition     go to state 21


state 1

   90 direct_declarator: '(' . declarator ')'

    '('         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2

    declarator         go to state 22
    direct_declarator  go to state 18


state 2

   89 direct_declarator: IDENTIFIER .

    $default  reduce using rule 89 (direct_declarator)


state 3

   79 type_specifier: CHAR .

    $default  reduce using rule 79 (type_specifier)


state 4

   80 type_specifier: SHORT .

    $default  reduce using rule 80 (type_specifier)


state 5

   81 type_specifier: INT .

    $default  reduce using rule 81 (type_specifier)


state 6

   82 type_specifier: LONG .

    $default  reduce using rule 82 (type_specifier)


state 7

   85 type_specifier: SIGNED .

    $default  reduce using rule 85 (type_specifier)


state 8

   86 type_specifier: UNSIGNED .

    $default  reduce using rule 86 (type_specifier)


state 9

   83 type_specifier: FLOAT .

    $default  reduce using rule 83 (type_specifier)


state 10

   84 type_specifier: DOUBLE .

    $default  reduce using rule 84 (type_specifier)


state 11

   87 type_qualifier: CONST .

    $default  reduce using rule 87 (type_qualifier)


state 12

   78 type_specifier: VOID .

    $default  reduce using rule 78 (type_specifier)


state 13

  133 external_declaration: declaration .

    $default  reduce using rule 133 (external_declaration)


state 14

   68 declaration: declaration_specifiers . ';'
   69            | declaration_specifiers . init_declarator_list ';'
  134 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  135                    | declaration_specifiers . declarator compound_statement

    '('         shift, and go to state 1
    ';'         shift, and go to state 23
    IDENTIFIER  shift, and go to state 2

    init_declarator_list  go to state 24
    init_declarator       go to state 25
    declarator            go to state 26
    direct_declarator     go to state 18


state 15

   70 declaration_specifiers: type_specifier .
   71                       | type_specifier . declaration_specifiers

    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    $default  reduce using rule 70 (declaration_specifiers)

    declaration_specifiers  go to state 27
    type_specifier          go to state 15
    type_qualifier          go to state 16


state 16

   72 declaration_specifiers: type_qualifier .
   73                       | type_qualifier . declaration_specifiers

    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    $default  reduce using rule 72 (declaration_specifiers)

    declaration_specifiers  go to state 28
    type_specifier          go to state 15
    type_qualifier          go to state 16


state 17

  136 function_definition: declarator . declaration_list compound_statement
  137                    | declarator . compound_statement

    '{'       shift, and go to state 29
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    declaration             go to state 30
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    type_qualifier          go to state 16
    compound_statement      go to state 32
    declaration_list        go to state 33


state 18

   88 declarator: direct_declarator .
   91 direct_declarator: direct_declarator . '[' ']'
   92                  | direct_declarator . '(' identifier_list ')'
   93                  | direct_declarator . '(' ')'

    '('  shift, and go to state 34
    '['  shift, and go to state 35

    $default  reduce using rule 88 (declarator)


state 19

    0 $accept: translation_unit . $end
  131 translation_unit: translation_unit . external_declaration

    $end        shift, and go to state 36
    '('         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    CHAR        shift, and go to state 3
    SHORT       shift, and go to state 4
    INT         shift, and go to state 5
    LONG        shift, and go to state 6
    SIGNED      shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    FLOAT       shift, and go to state 9
    DOUBLE      shift, and go to state 10
    CONST       shift, and go to state 11
    VOID        shift, and go to state 12

    declaration             go to state 13
    declaration_specifiers  go to state 14
    type_specifier          go to state 15
    type_qualifier          go to state 16
    declarator              go to state 17
    direct_declarator       go to state 18
    external_declaration    go to state 37
    function_definition     go to state 21


state 20

  130 translation_unit: external_declaration .

    $default  reduce using rule 130 (translation_unit)


state 21

  132 external_declaration: function_definition .

    $default  reduce using rule 132 (external_declaration)


state 22

   90 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 38


state 23

   68 declaration: declaration_specifiers ';' .

    $default  reduce using rule 68 (declaration)


state 24

   69 declaration: declaration_specifiers init_declarator_list . ';'
   75 init_declarator_list: init_declarator_list . ',' init_declarator

    ';'  shift, and go to state 39
    ','  shift, and go to state 40


state 25

   74 init_declarator_list: init_declarator .

    $default  reduce using rule 74 (init_declarator_list)


state 26

   76 init_declarator: declarator .
   77                | declarator . '=' initializer
  134 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  135                    | declaration_specifiers declarator . compound_statement

    '='       shift, and go to state 41
    '{'       shift, and go to state 29
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    $default  reduce using rule 76 (init_declarator)

    declaration             go to state 30
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    type_qualifier          go to state 16
    compound_statement      go to state 42
    declaration_list        go to state 43


state 27

   71 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 71 (declaration_specifiers)


state 28

   73 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 73 (declaration_specifiers)


state 29

  107 compound_statement: '{' . '}'
  108                   | '{' . statement_list '}'
  109                   | '{' . declaration_list '}'
  110                   | '{' . declaration_list statement_list '}'
  111                   | '{' . statement_list declaration_list '}'

    '('             shift, and go to state 44
    '{'             shift, and go to state 29
    '}'             shift, and go to state 45
    '+'             shift, and go to state 46
    '*'             shift, and go to state 47
    '-'             shift, and go to state 48
    '&'             shift, and go to state 49
    ';'             shift, and go to state 50
    IDENTIFIER      shift, and go to state 51
    CONSTANT        shift, and go to state 52
    STRING_LITERAL  shift, and go to state 53
    SIZEOF          shift, and go to state 54
    INC_OP          shift, and go to state 55
    DEC_OP          shift, and go to state 56
    CHAR            shift, and go to state 3
    SHORT           shift, and go to state 4
    INT             shift, and go to state 5
    LONG            shift, and go to state 6
    SIGNED          shift, and go to state 7
    UNSIGNED        shift, and go to state 8
    FLOAT           shift, and go to state 9
    DOUBLE          shift, and go to state 10
    CONST           shift, and go to state 11
    VOID            shift, and go to state 12
    IF              shift, and go to state 57
    WHILE           shift, and go to state 58
    FOR             shift, and go to state 59
    RETURN          shift, and go to state 60
    PRINTF          shift, and go to state 61
    SCANF           shift, and go to state 62
    '~'             shift, and go to state 63
    '!'             shift, and go to state 64

    primary_expression         go to state 65
    postfix_expression         go to state 66
    unary_expression           go to state 67
    unary_operator             go to state 68
    cast_expression            go to state 69
    multiplicative_expression  go to state 70
    additive_expression        go to state 71
    shift_expression           go to state 72
    relational_expression      go to state 73
    equality_expression        go to state 74
    and_expression             go to state 75
    exclusive_or_expression    go to state 76
    inclusive_or_expression    go to state 77
    logical_and_expression     go to state 78
    logical_or_expression      go to state 79
    conditional_expression     go to state 80
    assignment_expression      go to state 81
    expression                 go to state 82
    declaration                go to state 30
    declaration_specifiers     go to state 31
    type_specifier             go to state 15
    type_qualifier             go to state 16
    statement                  go to state 83
    compound_statement         go to state 84
    declaration_list           go to state 85
    statement_list             go to state 86
    expression_statement       go to state 87
    selection_statement        go to state 88
    iteration_statement        go to state 89
    printf_statment            go to state 90
    scanf_statment             go to state 91
    jump_statement             go to state 92


state 30

  112 declaration_list: declaration .

    $default  reduce using rule 112 (declaration_list)


state 31

   68 declaration: declaration_specifiers . ';'
   69            | declaration_specifiers . init_declarator_list ';'

    '('         shift, and go to state 1
    ';'         shift, and go to state 23
    IDENTIFIER  shift, and go to state 2

    init_declarator_list  go to state 24
    init_declarator       go to state 25
    declarator            go to state 93
    direct_declarator     go to state 18


state 32

  137 function_definition: declarator compound_statement .

    $default  reduce using rule 137 (function_definition)


state 33

  113 declaration_list: declaration_list . declaration
  136 function_definition: declarator declaration_list . compound_statement

    '{'       shift, and go to state 29
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    declaration             go to state 94
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    type_qualifier          go to state 16
    compound_statement      go to state 95


state 34

   92 direct_declarator: direct_declarator '(' . identifier_list ')'
   93                  | direct_declarator '(' . ')'

    ')'         shift, and go to state 96
    IDENTIFIER  shift, and go to state 97

    identifier_list  go to state 98


state 35

   91 direct_declarator: direct_declarator '[' . ']'

    ']'  shift, and go to state 99


state 36

    0 $accept: translation_unit $end .

    $default  accept


state 37

  131 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 131 (translation_unit)


state 38

   90 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 90 (direct_declarator)


state 39

   69 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 69 (declaration)


state 40

   75 init_declarator_list: init_declarator_list ',' . init_declarator

    '('         shift, and go to state 1
    IDENTIFIER  shift, and go to state 2

    init_declarator    go to state 100
    declarator         go to state 93
    direct_declarator  go to state 18


state 41

   77 init_declarator: declarator '=' . initializer

    '('             shift, and go to state 44
    '{'             shift, and go to state 101
    '+'             shift, and go to state 46
    '*'             shift, and go to state 47
    '-'             shift, and go to state 48
    '&'             shift, and go to state 49
    IDENTIFIER      shift, and go to state 51
    CONSTANT        shift, and go to state 52
    STRING_LITERAL  shift, and go to state 53
    SIZEOF          shift, and go to state 54
    INC_OP          shift, and go to state 55
    DEC_OP          shift, and go to state 56
    '~'             shift, and go to state 63
    '!'             shift, and go to state 64

    primary_expression         go to state 65
    postfix_expression         go to state 66
    unary_expression           go to state 67
    unary_operator             go to state 68
    cast_expression            go to state 69
    multiplicative_expression  go to state 70
    additive_expression        go to state 71
    shift_expression           go to state 72
    relational_expression      go to state 73
    equality_expression        go to state 74
    and_expression             go to state 75
    exclusive_or_expression    go to state 76
    inclusive_or_expression    go to state 77
    logical_and_expression     go to state 78
    logical_or_expression      go to state 79
    conditional_expression     go to state 80
    assignment_expression      go to state 102
    initializer                go to state 103


state 42

  135 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 135 (function_definition)


state 43

  113 declaration_list: declaration_list . declaration
  134 function_definition: declaration_specifiers declarator declaration_list . compound_statement

    '{'       shift, and go to state 29
    CHAR      shift, and go to state 3
    SHORT     shift, and go to state 4
    INT       shift, and go to state 5
    LONG      shift, and go to state 6
    SIGNED    shift, and go to state 7
    UNSIGNED  shift, and go to state 8
    FLOAT     shift, and go to state 9
    DOUBLE    shift, and go to state 10
    CONST     shift, and go to state 11
    VOID      shift, and go to state 12

    declaration             go to state 94
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    type_qualifier          go to state 16
    compound_statement      go to state 104


state 44

    4 primary_expression: '(' . expression ')'

    '('             shift, and go to state 44
    '+'             shift, and go to state 46
    '*'             shift, and go to state 47
    '-'             shift, and go to state 48
    '&'             shift, and go to state 49
    IDENTIFIER      shift, and go to state 51
    CONSTANT        shift, and go to state 52
    STRING_LITERAL  shift, and go to state 53
    SIZEOF          shift, and go to state 54
    INC_OP          shift, and go to state 55
    DEC_OP          shift, and go to state 56
    '~'             shift, and go to state 63
    '!'             shift, and go to state 64

    primary_expression         go to state 65
    postfix_expression         go to state 66
    unary_expression           go to state 67
    unary_operator             go to state 68
    cast_expression            go to state 69
    multiplicative_expression  go to state 70
    additive_expression        go to state 71
    shift_expression           go to state 72
    relational_expression      go to state 73
    equality_expression        go to state 74
    and_expression             go to state 75
    exclusive_or_expression    go to state 76
    inclusive_or_expression    go to state 77
    logical_and_expression     go to state 78
    logical_or_expression      go to state 79
    conditional_expression     go to state 80
    assignment_expression      go to state 81
    expression                 go to state 105


state 45

  107 compound_statement: '{' '}' .

    $default  reduce using rule 107 (compound_statement)


state 46

   20 unary_operator: '+' .

    $default  reduce using rule 20 (unary_operator)


state 47

   19 unary_operator: '*' .

    $default  reduce using rule 19 (unary_operator)


state 48

   21 unary_operator: '-' .

    $default  reduce using rule 21 (unary_operator)


state 49

   18 unary_operator: '&' .

    $default  reduce using rule 18 (unary_operator)


state 50

  116 expression_statement: ';' .

    $default  reduce using rule 116 (expression_statement)


state 51

    1 primary_expression: IDENTIFIER .

    $default  reduce using rule 1 (primary_expression)


state 52

    2 primary_expression: CONSTANT .

    $default  reduce using rule 2 (primary_expression)


state 53

    3 primary_expression: STRING_LITERAL .

    $default  reduce using rule 3 (primary_expression)


state 54

   17 unary_expression: SIZEOF . unary_expression

    '('             shift, and go to state 44
    '+'             shift, and go to state 46
    '*'             shift, and go to state 47
    '-'             shift, and go to state 48
    '&'             shift, and go to state 49
    IDENTIFIER      shift, and go to state 51
    CONSTANT        shift, and go to state 52
    STRING_LITERAL  shift, and go to state 53
    SIZEOF          shift, and go to state 54
    INC_OP          shift, and go to state 55
    DEC_OP          shift, and go to state 56
    '~'             shift, and go to state 63
    '!'             shift, and go to state 64

    primary_expression  go to state 65
    postfix_expression  go to state 66
    unary_expression    go to state 106
    unary_operator      go to state 68


state 55

   14 unary_expression: INC_OP . unary_expression

    '('             shift, and go to state 44
    '+'             shift, and go to state 46
    '*'             shift, and go to state 47
    '-'             shift, and go to state 48
    '&'             shift, and go to state 49
    IDENTIFIER      shift, and go to state 51
    CONSTANT        shift, and go to state 52
    STRING_LITERAL  shift, and go to state 53
    SIZEOF          shift, and go to state 54
    INC_OP          shift, and go to state 55
    DEC_OP          shift, and go to state 56
    '~'             shift, and go to state 63
    '!'             shift, and go to state 64

    primary_expression  go to state 65
    postfix_expression  go to state 66
    unary_expression    go to state 107
    unary_operator      go to state 68


state 56

   15 unary_expression: DEC_OP . unary_expression

    '('             shift, and go to state 44
    '+'             shift, and go to state 46
    '*'             shift, and go to state 47
    '-'             shift, and go to state 48
    '&'             shift, and go to state 49
    IDENTIFIER      shift, and go to state 51
    CONSTANT        shift, and go to state 52
    STRING_LITERAL  shift, and go to state 53
    SIZEOF          shift, and go to state 54
    INC_OP          shift, and go to state 55
    DEC_OP          shift, and go to state 56
    '~'             shift, and go to state 63
    '!'             shift, and go to state 64

    primary_expression  go to state 65
    postfix_expression  go to state 66
    unary_expression    go to state 108
    unary_operator      go to state 68


state 57

  118 selection_statement: IF . '(' expression ')' statement
  119                    | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 109


state 58

  120 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 110


state 59

  121 iteration_statement: FOR . '(' expression_statement expression_statement ')' statement
  122                    | FOR . '(' expression_statement expression_statement expression ')' statement

    '('  shift, and go to state 111


state 60

  128 jump_statement: RETURN . ';'
  129               | RETURN . expression ';'

    '('             shift, and go to state 44
    '+'             shift, and go to state 46
    '*'             shift, and go to state 47
    '-'             shift, and go to state 48
    '&'             shift, and go to state 49
    ';'             shift, and go to state 112
    IDENTIFIER      shift, and go to state 51
    CONSTANT        shift, and go to state 52
    STRING_LITERAL  shift, and go to state 53
    SIZEOF          shift, and go to state 54
    INC_OP          shift, and go to state 55
    DEC_OP          shift, and go to state 56
    '~'             shift, and go to state 63
    '!'             shift, and go to state 64

    primary_expression         go to state 65
    postfix_expression         go to state 66
    unary_expression           go to state 67
    unary_operator             go to state 68
    cast_expression            go to state 69
    multiplicative_expression  go to state 70
    additive_expression        go to state 71
    shift_expression           go to state 72
    relational_expression      go to state 73
    equality_expression        go to state 74
    and_expression             go to state 75
    exclusive_or_expression    go to state 76
    inclusive_or_expression    go to state 77
    logical_and_expression     go to state 78
    logical_or_expression      go to state 79
    conditional_expression     go to state 80
    assignment_expression      go to state 81
    expression                 go to state 113


state 61

  123 printf_statment: PRINTF . '(' STRING_LITERAL arg_list ')' ';'
  124                | PRINTF . '(' STRING_LITERAL ')' ';'

    '('  shift, and go to state 114


state 62

  125 scanf_statment: SCANF . '(' STRING_LITERAL ',' IDENTIFIER ')' ';'

    '('  shift, and go to state 115


state 63

   22 unary_operator: '~' .

    $default  reduce using rule 22 (unary_operator)


state 64

   23 unary_operator: '!' .

    $default  reduce using rule 23 (unary_operator)


state 65

    5 postfix_expression: primary_expression .

    $default  reduce using rule 5 (postfix_expression)


state 66

    6 postfix_expression: postfix_expression . '[' expression ']'
    7                   | postfix_expression . '(' ')'
    8                   | postfix_expression . '(' argument_expression_list ')'
    9                   | postfix_expression . INC_OP
   10                   | postfix_expression . DEC_OP
   13 unary_expression: postfix_expression .

    '('     shift, and go to state 116
    '['     shift, and go to state 117
    INC_OP  shift, and go to state 118
    DEC_OP  shift, and go to state 119

    $default  reduce using rule 13 (unary_expression)


state 67

   24 cast_expression: unary_expression .
   54 assignment_expression: unary_expression . assignment_operator assignment_expression

    '='           shift, and go to state 120
    MUL_ASSIGN    shift, and go to state 121
    DIV_ASSIGN    shift, and go to state 122
    MOD_ASSIGN    shift, and go to state 123
    ADD_ASSIGN    shift, and go to state 124
    SUB_ASSIGN    shift, and go to state 125
    LEFT_ASSIGN   shift, and go to state 126
    RIGHT_ASSIGN  shift, and go to state 127
    AND_ASSIGN    shift, and go to state 128
    XOR_ASSIGN    shift, and go to state 129
    OR_ASSIGN     shift, and go to state 130

    $default  reduce using rule 24 (cast_expression)

    assignment_operator  go to state 131


state 68

   16 unary_expression: unary_operator . cast_expression

    '('             shift, and go to state 44
    '+'             shift, and go to state 46
    '*'             shift, and go to state 47
    '-'             shift, and go to state 48
    '&'             shift, and go to state 49
    IDENTIFIER      shift, and go to state 51
    CONSTANT        shift, and go to state 52
    STRING_LITERAL  shift, and go to state 53
    SIZEOF          shift, and go to state 54
    INC_OP          shift, and go to state 55
    DEC_OP          shift, and go to state 56
    '~'             shift, and go to state 63
    '!'             shift, and go to state 64

    primary_expression  go to state 65
    postfix_expression  go to state 66
    unary_expression    go to state 132
    unary_operator      go to state 68
    cast_expression     go to state 133


state 69

   25 multiplicative_expression: cast_expression .

    $default  reduce using rule 25 (multiplicative_expression)


state 70

   26 multiplicative_expression: multiplicative_expression . '*' cast_expression
   27                          | multiplicative_expression . '/' cast_expression
   28                          | multiplicative_expression . '%' cast_expression
   29 additive_expression: multiplicative_expression .

    '*'  shift, and go to state 134
    '/'  shift, and go to state 135
    '%'  shift, and go to state 136

    $default  reduce using rule 29 (additive_expression)


state 71

   30 additive_expression: additive_expression . '+' multiplicative_expression
   31                    | additive_expression . '-' multiplicative_expression
   32 shift_expression: additive_expression .

    '+'  shift, and go to state 137
    '-'  shift, and go to state 138

    $default  reduce using rule 32 (shift_expression)


state 72

   33 relational_expression: shift_expression .

    $default  reduce using rule 33 (relational_expression)


state 73

   34 relational_expression: relational_expression . '<' shift_expression
   35                      | relational_expression . '>' shift_expression
   36                      | relational_expression . LE_OP shift_expression
   37                      | relational_expression . GE_OP shift_expression
   38 equality_expression: relational_expression .

    '<'    shift, and go to state 139
    '>'    shift, and go to state 140
    LE_OP  shift, and go to state 141
    GE_OP  shift, and go to state 142
